# msdf-atlas-gen

./: .gitmodules  CMakeLists.txt
msdf-atlas-gen/: main.cpp
